WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198392
Fix AVVideoCaptureSource::setFrameRateWithPreset logging
https://bugs.webkit.org/show_bug.cgi?id=198392
Summary
Fix AVVideoCaptureSource::setFrameRateWithPreset logging
youenn fablet
Reported
2019-05-30 15:48:16 PDT
Fix AVVideoCaptureSource::setFrameRateWithPreset logging
Attachments
Patch
(2.16 KB, patch)
2019-05-30 15:50 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-05-30 15:50:12 PDT
Created
attachment 370987
[details]
Patch
WebKit Commit Bot
Comment 2
2019-05-30 21:57:12 PDT
Comment on
attachment 370987
[details]
Patch Clearing flags on attachment: 370987 Committed
r245948
: <
https://trac.webkit.org/changeset/245948
>
WebKit Commit Bot
Comment 3
2019-05-30 21:57:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-05-30 21:58:17 PDT
<
rdar://problem/51290498
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug