Fix AVVideoCaptureSource::setFrameRateWithPreset logging https://bugs.webkit.org/show_bug.cgi?id=198392

Reviewed by Eric Carlson.

Move logging from setFrameRateWithPreset to setSessionSizeAndFrameRate which does the actual job.
This ensures to not log in case of preset being null.
No change of behavior.

* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::setFrameRateWithPreset):
(WebCore::AVVideoCaptureSource::setSessionSizeAndFrameRate):


Canonical link: https://commits.webkit.org/212427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245948 268f45cc-cd09-0410-ab3c-d52691b4dbfc